<resources>
    <string name="app_name">AppPrimerSQLite</string>
    <string name="btn_alta">Alta Contacto</string>
    <string name="btn_consulta">Consulta Contactos</string>
    <string name="btn_modificar">Modifica Contacto</string>
    <string name="btn_borrar">Elimina Contacto</string>
    <string name="etNombreAlta">Nombre Contacto</string>
    <string name="et_email_alta_hint">Email</string>
    <string name="btn_guardar_alta">Guardar</string>
    <string name="btn_cancelar_alta">Cancelar</string>
    <string name="btn_volver">Volver</string>
    <string name="et_id_hint">Introduce un ID</string>
    <string name="btn_buscar_mod">Buscar</string>
    <string name="btn_guardar_borrar">Borrar</string>
</resources>
