<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".BorrarActivity">

    <EditText
        android:id="@+id/etIdBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:hint="@string/et_id_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/btnBuscarBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etIdBorrar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="-1dp"
        android:onClick="buscarBorrar"
        android:text="@string/btn_buscar_mod" />

    <EditText
        android:id="@+id/etNombreBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/etNombreAlta"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmailBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="266dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/et_email_alta_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnGuardarBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="162dp"
        android:enabled="false"
        android:onClick="borrar"
        android:text="@string/btn_guardar_borrar" />

    <Button
        android:id="@+id/btnCancelarBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnGuardarBorrar"
        android:layout_alignLeft="@+id/btnGuardarBorrar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="112dp"
        android:onClick="cancelarMod"
        android:text="@string/btn_cancelar_alta" />

</RelativeLayout>