<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlAlta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".AltaActivity">

    <EditText
        android:id="@+id/etNombreAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/etNombreAlta"
        android:inputType="textPersonName"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/etEmailAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/et_email_alta_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnGuardarAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:onClick="guardar"
        android:text="@string/btn_guardar_alta" />

    <Button
        android:id="@+id/btnCancelarAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="205dp"
        android:onClick="cancelar"
        android:text="@string/btn_cancelar_alta" />
</RelativeLayout>